@@ -1,6 +1,6 @@
 package com.example.login2.config;
 
-import java.util.List;
+import java.util.Arrays;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -9,6 +9,7 @@ import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.security.web.AuthenticationEntryPoint;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
@@ -17,6 +18,8 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import com.example.login2.security.JwtAuthenticationFilter;
 import com.example.login2.security.JwtTokenProvider;
+
+import jakarta.servlet.http.HttpServletResponse;
 
 @Configuration
 @EnableWebSecurity
@@ -28,45 +31,54 @@ public class SecurityConfig {
         this.tokenProvider = tokenProvider;
     }
 
+    // 인증 실패시 401 처리
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+    public AuthenticationEntryPoint authenticationEntryPoint() {
+        return (request, response, authException) -> {
+            response.setContentType("application/json;charset=UTF-8");
+            response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+            response.getWriter().write("{\"message\":\"Unauthorized\"}");
+        };
+    }
+
+    @Bean
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         JwtAuthenticationFilter jwtAuthenticationFilter = new JwtAuthenticationFilter(tokenProvider);
 
         http
-            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            .csrf().disable()
-            .httpBasic().disable()
-            .formLogin().disable()
-            .authorizeHttpRequests(auth -> auth
-                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+            .csrf(csrf -> csrf.disable()) // CSRF 비활성화 (스테이트리스 API 서버에서 일반적)
+            .httpBasic(httpBasic -> httpBasic.disable()) // HTTP Basic 인증 비활성화
+            .formLogin(formLogin -> formLogin.disable()) // Form Login 비활성화
+            .cors(cors -> cors.configurationSource(corsConfigurationSource())) // **CORS 설정 적용**
+            .exceptionHandling(exceptionHandling -> exceptionHandling
+                .authenticationEntryPoint(authenticationEntryPoint()) // 인증 실패 핸들러 등록
+            )
+            .authorizeHttpRequests(authorize -> authorize
+            	.requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                 .requestMatchers(
                     "/login/**",
                     "/signup/**",
                     "/login/find-email",
                     "/login/temp-password"
-                ).permitAll()
-                .requestMatchers("/userinfo").authenticated()
-                .anyRequest().permitAll()
+                ).permitAll() // 특정 경로 허용
+                .requestMatchers("/userinfo").authenticated() // /userinfo는 인증 필요
+                .anyRequest().permitAll() // 나머지 모든 요청 허용 (초기 개발 시)
             )
-            .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+            .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class); // JWT 필터 추가
 
         return http.build();
     }
 
-    
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        
-    	CorsConfiguration config = new CorsConfiguration();
-        
-        config.setAllowedOrigins(List.of("http://localhost:3000",
-        		"http://my-login-frontend-bucket.s3-website.ap-northeast-2.amazonaws.com"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
-        config.setAllowCredentials(true);
-
+        CorsConfiguration configuration = new CorsConfiguration();
+     
+        configuration.setAllowedOrigins(Arrays.asList("http://my-login-frontend-bucket.s3-website.ap-northeast-2.amazonaws.com", "http://localhost:3000"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("*")); // 모든 헤더 허용
+        configuration.setAllowCredentials(true); // 자격 증명(쿠키, HTTP 인증) 허용
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
+        source.registerCorsConfiguration("/**", configuration); // 모든 경로에 대해 CORS 설정 적용
         return source;
     }
 
